envoy.yaml
static_resources:
  listeners:
    - name: default_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: [ "*" ]
                      routes:
                        - match: { prefix: "/api/default" }
                          route: { auto_host_rewrite: true, cluster: api_default, timeout: 300s }
                        - match: { prefix: "/api/loadbalance" }
                          route: { auto_host_rewrite: true, cluster: api_loadbalance, timeout: 300s }
                        - match: { prefix: "/api/rewrite" }
                          route: { auto_host_rewrite: true, prefix_rewrite: "/api/default", cluster: api_loadbalance, timeout: 300s }
                        - match: { prefix: "/api/uarewrite" }
                          route: { auto_host_rewrite: true, cluster: api_loadbalance, timeout: 300s }
                  request_headers_to_add:
                    - header:
                        key: "User-Agent"
                        value: "NEU-Cangjie"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: api_default
      connect_timeout: 0.25s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: api_default
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: reverseproxybenchmark-backendserver-1
                      port_value: 8080
    - name: api_loadbalance
      connect_timeout: 0.25s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: api_loadbalance
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: reverseproxybenchmark-backendserver-1
                      port_value: 8080
              - endpoint:
                  address:
                    socket_address:
                      address: reverseproxybenchmark-backendserver-2
                      port_value: 8080
              - endpoint:
                  address:
                    socket_address:
                      address: reverseproxybenchmark-backendserver-3
                      port_value: 8080
